--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -1,4 +1,4 @@
-vscode_extensions:
+vscodium_extensions:
   - 'coenraads.bracket-pair-colorizer'
   - 'dotjoshjohnson.xml'
   - 'dracula-theme.theme-dracula'
