--- a/playbook.yml
+++ b/playbook.yml
@@ -66,7 +66,7 @@
     - tor_browser
     - transmission
     - virtualbox
-    - vscode
+    - vscodium
     - wireguard
     - youtube_dl
     - zsh
