--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 ansible_managed = "- DO NOT EDIT - see template: {file}"
 callback_whitelist = profile_roles, profile_tasks, timer
 inventory = hosts.yml
-log_path = ~/Desktop/ansible.log
+log_path = /tmp/ansible.log
 nocows = True
 stdout_callback = yaml
 
