fix global visibility in the return value of latest_release helper

--- a/helpers/latest_release.yml
+++ b/helpers/latest_release.yml
@@ -17,7 +17,10 @@
       {{
         helper_latest_release_result
         | default([])
-        + [item]
+        + [{
+            'id': role_name,
+            'url': item
+          }]
       }}
   when: item | regex_search(latest_release_facts.pattern)
   loop: |-
