--- a/roles/vscodium/tasks/main.yml
+++ b/roles/vscodium/tasks/main.yml
@@ -8,11 +8,12 @@
 - name: install package
   become: True
   apt:
-    deb: '{{ item }}'
+    deb: '{{ item.url }}'
   register: apt_deb_result
   until: not apt_deb_result.failed
   retries: 10
   delay: 10
+  when: item.id == role_name
   loop: '{{ helper_latest_release_result }}'
 
 - import_tasks: '{{ helpers }}/package_pip.yml'
