--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -2,6 +2,7 @@ vscodium_extensions:
   - 'coenraads.bracket-pair-colorizer'
   - 'dotjoshjohnson.xml'
   - 'dracula-theme.theme-dracula'
+  - 'dsznajder.es7-react-js-snippets'
   - 'editorconfig.editorconfig'
   - 'esbenp.prettier-vscode'
   - 'joshpeng.sublime-babel-vscode'
