vscodium: update config

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -34,7 +34,9 @@
   "editor.fontLigatures": true,
   "editor.fontSize": 16,
   "editor.formatOnSave": true,
+  "editor.glyphMargin": false,
   "editor.lineHeight": 26,
+  "editor.lineNumbers": "off",
   "editor.minimap.enabled": false,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.occurrencesHighlight": false,
@@ -65,9 +67,11 @@
   "search.showLineNumbers": true,
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
+  "terminal.integrated.commandsToSkipShell": ["-workbench.action.quickOpen"],
   "terminal.integrated.drawBoldTextInBrightColors": false,
   "terminal.integrated.fontFamily": "{{ user_font_monospace }}, monospace",
   "terminal.integrated.fontSize": 16,
+  "terminal.integrated.lineHeight": 1.1,
   "update.channel": "none",
   "update.enableWindowsBackgroundUpdates": false,
   "update.showReleaseNotes": false,
@@ -78,11 +82,15 @@
   "workbench.colorTheme": "Dracula Soft",
   "workbench.editor.showTabs": false,
   "workbench.enableExperiments": false,
+  "workbench.list.keyboardNavigation": "filter",
   "workbench.settings.editor": "json",
+  "workbench.settings.useSplitJSON": true,
   "workbench.sideBar.location": "right",
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
   "workbench.tips.enabled": false,
+  "workbench.tree.horizontalScrolling": true,
+  "workbench.tree.indent": 10,
   "xmlTools.enableXmlTreeView": false,
   "xmlTools.enforcePrettySelfClosingTagOnFormat": true,
   "xmlTools.removeCommentsOnMinify": true,
