fix log_path variable

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 ansible_managed = "- DO NOT EDIT - see template: {file}"
 callback_whitelist = profile_roles, profile_tasks, timer
 inventory = hosts.yml
-log_path = /var/log/ansible.log
+log_path = ~/.ansible/ansible.log
 nocows = True
 retry_files_enabled = False
 stdout_callback = yaml
