--- a/roles/rhythmbox/defaults/main.yml
+++ b/roles/rhythmbox/defaults/main.yml
@@ -8,7 +8,19 @@ rhythmbox_settings:
   - key: '/org/gnome/rhythmbox/sharing/enable-sharing'
     value: 'false'
   - key: '/org/gnome/rhythmbox/plugins/active-plugins'
-    value: '@as []'
+    value: |-
+      [
+        'android',
+        'audiocd',
+        'dbus-media-server',
+        'generic-player',
+        'iradio',
+        'mmkeys',
+        'mpris',
+        'power-manager',
+        'rb',
+        'tray_icon'
+      ]
   - key: '/org/gnome/rhythmbox/podcast/download-interval'
     value: "'manual'"
   - key: '/org/gnome/rhythmbox/sources/visible-columns'
@@ -18,4 +30,6 @@ rhythmbox_settings:
   - key: '/org/gnome/rhythmbox/size'
     value: '(1000,700)'
   - key: '/org/gnome/rhythmbox/statusbar-visible'
+    value: 'false'
+  - key: '/org/gnome/rhythmbox/time-display'
     value: 'false'
