refactor(rhythmbox): delete plugins packages completely

--- a/roles/rhythmbox/tasks/main.yml
+++ b/roles/rhythmbox/tasks/main.yml
@@ -1,3 +1,10 @@
+- import_tasks: '{{ helpers }}/package_apt.yml'
+  vars:
+    package_apt_facts:
+      remove:
+        - 'rhythmbox-plugin-tray-icon'
+        - 'rhythmbox-plugins'
+
 - import_tasks: '{{ helpers }}/dconf.yml'
   vars:
     dconf_facts: '{{ rhythmbox_settings }}'
