chore(vscodium): update settings.json

--- a/roles/vscodium/templates/settings.json
+++ b/roles/vscodium/templates/settings.json
@@ -30,9 +30,11 @@
     "yaml"
   ],
   "cSpell.userWords": ["repo"],
+  "editor.accessibilitySupport": "off",
+  "editor.foldingStrategy": "indentation",
   "editor.fontFamily": "{{ user_font }}, monospace",
   "editor.fontLigatures": true,
-  "editor.fontSize": 16,
+  "editor.fontSize": 17,
   "editor.formatOnSave": true,
   "editor.glyphMargin": false,
   "editor.lineHeight": 26,
@@ -40,12 +42,21 @@
   "editor.minimap.enabled": false,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.occurrencesHighlight": false,
+  "editor.quickSuggestions": {
+    "other": true,
+    "comments": true,
+    "strings": true
+  },
   "editor.renderLineHighlight": "gutter",
   "editor.renderWhitespace": "all",
   "editor.suggest.localityBonus": true,
   "editor.tabCompletion": "on",
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "eslint.autoFixOnSave": true,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
   "extensions.autoUpdate": false,
@@ -58,9 +69,9 @@
     "**/npm-debug.log*": true,
     "**/tmp": true
   },
+  "javascript.updateImportsOnFileMove.enabled": "always",
   "markdown.preview.fontFamily": "{{ user_font }}, monospace",
   "markdown.preview.fontSize": 16,
-  "prettier.singleQuote": true,
   "python.formatting.provider": "yapf",
   "python.pythonPath": "{{ ansible_playbook_python }}",
   "search.location": "panel",
@@ -68,12 +79,15 @@
   "telemetry.enableCrashReporter": false,
   "telemetry.enableTelemetry": false,
   "terminal.integrated.commandsToSkipShell": ["-workbench.action.quickOpen"],
+  "terminal.integrated.cursorStyle": "line",
   "terminal.integrated.drawBoldTextInBrightColors": false,
   "terminal.integrated.fontFamily": "{{ user_font_monospace }}, monospace",
   "terminal.integrated.fontSize": 16,
   "terminal.integrated.lineHeight": 1.1,
-  "update.channel": "none",
+  "typescript.surveys.enabled": false,
+  "typescript.validate.enable": false,
   "update.enableWindowsBackgroundUpdates": false,
+  "update.mode": "none",
   "update.showReleaseNotes": false,
   "window.menuBarVisibility": "toggle",
   "window.title": "${dirty}${activeEditorShort}${separator}${rootName}",
@@ -82,6 +96,7 @@
   "workbench.colorTheme": "Dracula Soft",
   "workbench.editor.showTabs": false,
   "workbench.enableExperiments": false,
+  "workbench.list.horizontalScrolling": true,
   "workbench.list.keyboardNavigation": "filter",
   "workbench.settings.editor": "json",
   "workbench.settings.useSplitJSON": true,
@@ -89,7 +104,6 @@
   "workbench.startupEditor": "none",
   "workbench.statusBar.feedback.visible": false,
   "workbench.tips.enabled": false,
-  "workbench.tree.horizontalScrolling": true,
   "workbench.tree.indent": 10,
   "xmlTools.enableXmlTreeView": false,
   "xmlTools.enforcePrettySelfClosingTagOnFormat": true,
