chore(vscodium): update list of plugins

--- a/roles/vscodium/defaults/main.yml
+++ b/roles/vscodium/defaults/main.yml
@@ -1,10 +1,11 @@
 vscodium_extensions:
-  - 'coenraads.bracket-pair-colorizer'
-  - 'dotjoshjohnson.xml'
-  - 'dracula-theme.theme-dracula'
-  - 'dsznajder.es7-react-js-snippets'
-  - 'editorconfig.editorconfig'
-  - 'esbenp.prettier-vscode'
-  - 'joshpeng.sublime-babel-vscode'
-  - 'ms-python.python'
-  - 'streetsidesoftware.code-spell-checker'
+  - "coenraads.bracket-pair-colorizer"
+  - "dbaeumer.vscode-eslint"
+  - "dotjoshjohnson.xml"
+  - "dracula-theme.theme-dracula"
+  - "dsznajder.es7-react-js-snippets"
+  - "editorconfig.editorconfig"
+  - "esbenp.prettier-vscode"
+  - "mgmcdermott.vscode-language-babel"
+  - "ms-python.python"
+  - "streetsidesoftware.code-spell-checker"
